// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLinks > renders with as correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</div>"
`;

exports[`PageLinks > renders with class correctly 1`] = `
"<nav data-slot="root" class="gap-1.5">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link">Link slot</a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link-label slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Link label slot<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Link label slot<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link-leading slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link-trailing slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>Link trailing slot</a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span>Link trailing slot</a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span>Link trailing slot</button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span>Link trailing slot</a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with links correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with title correctly 1`] = `
"<nav data-slot="root" class="">
  <p data-slot="title" class="">Resources</p>
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with title slot correctly 1`] = `
"<nav data-slot="root" class="">
  <p data-slot="title" class="">Title slot</p>
  <ul data-slot="list" class="">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with ui correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <ul data-slot="list" class="gap-3">
    <li data-slot="item" class=""><a href="/docs" data-slot="link"><span class="iconify i-lucide:book-open" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Documentation<!--v-if--></span></a></li>
    <li data-slot="item" class=""><a href="https://stackblitz.com/edit/pohon-ui" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-simple-icons:stackblitz" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Playground<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
    <li data-slot="item" class=""><button type="button" data-slot="link"><span class="iconify i-lucide:map" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Roadmap<!--v-if--></span></button></li>
    <li data-slot="item" class=""><a href="https://github.com/vinicunca/pohon/releases" rel="noopener noreferrer" target="_blank" data-slot="link"><span class="iconify i-lucide:rocket" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Releases<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="linkLabelExternalIcon"></span></span></a></li>
  </ul>
</nav>"
`;
